<resources>
    <string name="app_name">Practica5</string>
    <string name="welcome_text">Welcome to the Portales!</string>
    <string name="welcome_description">Taqueria Los Portales is a quick, casual restaurant.</string>
    <string name="button_start">Get Started!</string>

    <string name="name">Name</string>
    <string name="last_name">Last Name</string>
    <string name="e_mail">Email</string>
    <string name="password">Password</string>
    <string name="terms">I accept the terms and conditions</string>
    <string name="sign_in">Sign In</string>

    <string name="our_menu">Our Menu</string>
    <string name="antojitos">Antojitos</string>
    <string name="especialidades">Especialidades</string>
    <string name="Combinations">Combinations</string>
    <string name="drinks">Drinks</string>
    <string name="Sopas">Sopas</string>
    <string name="Tortas">Tortas</string>

</resources>