<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity"
    android:background="@color/white">

    <ImageView
        android:layout_width="215dp"
        android:layout_height="65dp"
        android:src="@drawable/imagen1"
        android:layout_marginTop="30dp"
        android:layout_gravity="center"/>

    <EditText
        android:id="@+id/name_input"
        android:textSize="15sp"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/name"
        android:inputType="text"
        android:layout_marginTop="@dimen/input_margin"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:background="@drawable/editttext_background"
        android:textColorHint="#A2A2A2"
        android:textColor="#000000" />

    <EditText
        android:id="@+id/last_name_input"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:textSize="15sp"
        android:hint="@string/last_name"
        android:inputType="text"
        android:layout_marginTop="@dimen/input_margin"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:background="@drawable/editttext_background"
        android:textColorHint="#A2A2A2"
        android:textColor="#000000" />

    <EditText
        android:id="@+id/email_input"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:textSize="15sp"
        android:hint="@string/e_mail"
        android:inputType="text"
        android:layout_marginTop="@dimen/input_margin"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:background="@drawable/editttext_background"
        android:textColorHint="#A2A2A2"
        android:textColor="#000000" />

    <EditText
        android:id="@+id/password_input"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:layout_marginTop="@dimen/input_margin"
        android:paddingStart="10dp"
        android:textSize="15sp"
        android:paddingEnd="10dp"
        android:background="@drawable/editttext_background"
        android:textColorHint="#A2A2A2"
        android:textColor="#000000" />


    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/terms"
        android:textSize="15sp"
        android:textColor="#757575"
        android:textStyle="italic"
        android:layout_marginTop="@dimen/input_margin"
        />



    <Button
        android:id="@+id/btn_sign_in"
        android:layout_width="219dp"
        android:layout_height="48dp"
        android:text="@string/sign_in"
        android:layout_gravity="center"
        android:layout_marginTop="60dp"
        android:background="@drawable/round_button"
        android:textColor="@color/white"
        android:textSize="15sp"
        android:fontFamily="sans-serif-medium"
        android:textAllCaps="true"
        android:gravity="center"/>


</LinearLayout>
